spacing issues

--- a/css/home.css
+++ b/css/home.css
@@ -146,9 +146,9 @@ section.copy {
   div.row.menu {
     width:100%;
     height:120px;
-    background-color: rgba(255, 255, 255, .05);
+    background-color: rgba(200, 201, 192, .75);
     position:fixed;
-    margin-top:-2em;
+    margin-top:-1.8em;
   }
   .mobile-nav  {
     list-style-type: none; /*to remove bullets*/
